refactor: upgrade AI service to Java 21 and optimize embedding seeding and recommendation scoring using virtual threads and parallel batch processing